# rl-tools

./: .clang-tidy  .gdbinit  .gdbinitt  .gitignore  .gitmodules  .lldbinit  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json  CTestConfig.cmake  CTestScript.cmake  MAINTENANCE.md  README.MD  README.md  TODO.md  TROUBLESHOOTING.md  banner.txt  codecov.yml  conanfile.txt  experiment.sh  index.html  neural_network.h  neural_network_helper.h  neural_network_models.h  polyak.h  run_experiment.sh  serve.sh
examples/td3_pendulum_cuda/: CMakeLists.txt  main.cu
include/rl_tools/ui_server/: CMakeLists.txt  download_dependencies.sh  server.h
include/rl_tools/ui_server/client/: client.h  operations_boost.h  operations_cpu.h  operations_websocket.h
include/rl_tools/ui_server/static/: drone.js  main.js
src/foundation_policy/: .gitignore  CMakeLists.txt  create_episode_length_return_plots.sh  extract_checkpoints.sh  get_checkpoints_t2w_t2i.sh  join_dynamics_parameters_return.sh
src/foundation_policy/analysis/: .gitignore  CMakeLists.txt  README.md  analyze.py  generate_data.py  linear_velocity_delay.cpp  main.cpp  models.json  probe.py  trajectory.py  trajectory_plot.py  ui.js
src/foundation_policy/analysis/scaling_laws/: README.md  job_list.py  retrieve_results.sh  scaling_laws.py
src/foundation_policy/post_training/: README.md  build_actor.sh  check_checkpoints.cpp  config.h  environment.h  generate_data.h  helper.h  load_actor.cpp  main.cpp  main_sequential.cpp  test_checkpoint.cpp
src/foundation_policy/pre_training/: README.md  config.h  environment.h  main.cpp  options.h  sample_dynamics_parameters.cpp
src/nn/mnist/: CMakeLists.txt  training.cpp
src/nn_models/port_checkpoint/raptor/: .gitignore  CMakeLists.txt  check_policy.cpp  main.cpp
src/rl/environments/acrobot/: CMakeLists.txt  acrobot.cpp  generate_test_data.py
src/rl/environments/car/: CMakeLists.txt  README.MD  build.sh  car.cpp  car_interactive.cpp  car_track.cpp  training.h  training_ppo.h  training_td3.h  ui.cpp  wasm_interface.cpp
src/rl/environments/multirotor/: CMakeLists.txt  assessment.cpp  comparison.cpp  evaluate_actor.cpp  parameters.h  ui.cpp  validation.cpp
src/rl/zoo/: CMakeLists.txt  README.md  config.h  enjoy.cpp  load_checkpoint_code.cpp  nn_analytics.py  zoo.cpp  zoo_cli.cpp
src/rl/zoo/acrobot-swingup-v0/: environment.h  sac.h
src/rl/zoo/ant-v4/: environment.h  ppo.h  td3.h
src/rl/zoo/bottleneck-v0/: environment.h  ppo.h
src/rl/zoo/flag/: environment.h  ppo.h  ppo_gru.h  ppo_gru_asymmetric.h  sac.h  td3.h
src/rl/zoo/flag-memory/: environment.h  ppo.h  sac.h  td3.h
src/rl/zoo/l2f/: environment.h  environment_big.h  environment_tiny.h  plot_learning_curves.py  ppo.h  sac.h  sac_big.h  sac_tiny.h  td3.h
src/rl/zoo/pendulum-multitask-v1/: environment.h  ppo.h  sac.h  td3.h
src/rl/zoo/pendulum-position-v1/: environment.h  ppo.h  sac.h  td3.h
src/rl/zoo/pendulum-v1/: environment.h  ppo.h  ppo_gru.h  sac.h  sac_state_estimation_dataset.h  td3.h
src/rl/zoo/pendulum-velocity-v1/: CMakeLists.txt  environment.h  load_gru.cpp  ppo.h  sac.h  state_estimation.py  td3.h
src/rl/zoo/ppo/: ant-v4.h  bottleneck-v0.h  pendulum-v1.h
src/rl/zoo/sac/: acrobot-swingup-v0.h  acrobot-v1.h  l2f.h  pendulum-v1.h
src/rl/zoo/td3/: ant-v4.h  l2f.h  pendulum-v1.h
src/ui_server/: CMakeLists.txt  server.cpp
src/ui_server/render/: .gitignore  Dockerfile  README.md  build.sh  make_video.sh  package-lock.json  package.json  puppeteer.html  puppeteer.js  render.sh  server.js  ui.js
tests/: CMakeLists.txt  Dockerfile  README.MD  download_data.sh  neural_network_test.cpp
tests/docker/: base_dockerfile  build-run.sh  tests_dockerfile
tests/install/: .gitignore  CMakeLists.txt  README.md
tests/nn/: default_network.h  full_training.cpp  persisting.cpp  test.cpp
tests/rl/algorithms/: off_policy_runner.cpp  td3.cpp
tests/rl/algorithms/td3/: first_stage.cpp  full_training.cpp  plot_policy_and_value_function.h  second_stage.cpp
tests/rl/environments/: pendulum.cpp  pendulum_render.cpp
tests/scripts/: build_configs.sh
tests/src/: CMakeLists.txt
tests/src/container/: CMakeLists.txt  cling_mkl_test.cpp  container.cpp  matmul.cpp  matmul_fast.cpp  persist_code_load.cpp  persist_code_store.cpp  tensor.cpp  tensor_persist.cpp  tensor_persist_code_compile.cpp  tensor_persist_code_fill.h  tensor_persist_code_store.cpp  tensor_sum.cpp
tests/src/container/cuda/: CMakeLists.txt  mkl.cu  test.cu
tests/src/container/mixed_precision/: CMakeLists.txt  bf16.cpp
tests/src/container/tensor/: CMakeLists.txt
tests/src/inference/executor/: CMakeLists.txt  l2f_c_interface.cpp  test_inference_executor.cpp  test_inference_l2f_c_interface.cpp  write_example_policy.cpp
tests/src/logging/: CMakeLists.txt  tensorboard.cpp
tests/src/math/: CMakeLists.txt  math.cpp
tests/src/nn/: CMakeLists.txt  arm.cpp  benchmark.cpp  conversions.cpp  default_network.h  default_network_mlp.h  full_training.cpp  full_training_mlp.cpp  mlp_vari.cpp  mode.cpp  open_dataset.py  persisting.cpp  sequential.cpp  test.cpp  test_mlp.cpp
tests/src/nn/cuda/: CMakeLists.txt  cuda_basics.cu  main.cu
tests/src/nn/layers/: CMakeLists.txt  dense.cpp
tests/src/nn_models/: CMakeLists.txt
tests/src/nn_models/mlp/: CMakeLists.txt  compile_actor.cpp  mlp_static.cpp
tests/src/nn_models/multi_agent_wrapper/: CMakeLists.txt  multi_agent_wrapper_persist_code.cpp  multi_agent_wrapper_persist_code_compile.cpp  multi_agent_wrapper_persist_code_compile_backward.cpp  multi_agent_wrapper_persist_code_compile_forward.cpp
tests/src/nn_models/sample_and_squash/: sample_and_squash.cpp
tests/src/nn_models/sequential/: CMakeLists.txt  compose.cpp  d_input_benchmark.cpp  persist.cpp  (+10 more)
tests/src/numeric_types/: CMakeLists.txt  supervised_training.cpp
tests/src/random/: CMakeLists.txt  arm.cpp
tests/src/rl/: CMakeLists.txt
tests/src/ui_server/: CMakeLists.txt  client.cpp
tests/src/utils/: CMakeLists.txt  nn_comparison.h  nn_comparison_mlp.h  utils.h
tests/utils/: nn_comparison.h  utils.h
(+1442 files in other folders)
